feat(api/identity): update User domain entity and auth security controls